--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -140,6 +140,8 @@ body {
 p {
   line-height: 1.6em;
   margin: 0 0 30px 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 ul,
 ol {
@@ -170,6 +172,7 @@ h6,
 h1 {
   font-size: 40px;
   font-size: 2.5rem;
+  padding-bottom: 20px;
 }
 h2 {
   font-size: 36px;
@@ -228,7 +231,7 @@ a:hover {
 }
 #head img.img-circle {
   display: block;
-  width: 160px;
+  width: 170px;
   height: 210px;
   overflow: hidden;
   border: 9px solid rgba(0, 0, 0, 0.05);
@@ -278,6 +281,12 @@ a:hover {
 **********************************************************************/
 img {
   max-width: 100%;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 .btn {
   font-size: 12px;
